components/navbar/_navbar.module.scss
@import '../../styles/_variables.scss';

.navbarContents {
    background-color: transparent;
    justify-content: right;

    .mainLink {
        color: $sage;
        font-size: 18px;
        font-weight: 250;
        letter-spacing: .2rem;
        text-transform: uppercase;

        a {
            color: $sage;
        }

        &:hover {
            color: $hookers-green;
        }
    }

    .childLink {

        &:hover {
            background-color: $sage;
            color: $light-beige;
            font-weight: 500;
        }
    }
}

.headerImages {
    align-items: center;
    display: flex;
    justify-content: space-between;

    .logoFigure {
        cursor: pointer;
        margin-left: 4rem;
        margin-top: 2rem;

        .logo {
            max-height: 185px;
        }

        figcaption {
            color: $black;
            font-family: $font-title;
            font-size: 18px;
            font-weight: 800;
            letter-spacing: .1rem;
        }
    }

    .topPlant {
        margin-top: 0.5rem;
        max-height: 250px;
        //TODO: add animated fadeIn
    }
}

@media only screen and (max-width: 768px) {

    .logo {
        max-height: 300px !important;
    }

    .logoFigure {
        display: flex;
        flex-direction: column;
        justify-items: center;

        figcaption {
            margin-left: 2rem;
        }
    }

    .topPlant {
        display: none;
    }
}

